fix: scroll right on mobile disabled

--- a/src/index.scss
+++ b/src/index.scss
@@ -71,10 +71,12 @@ h1 {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 main {
